# agentic

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agent/: LESSONS.md  MEMORY.md  OPERATING_ROUTINE.md  TASK_LOG.md
agentic/: __init__.py
config/: config.fast.toml  config.toml  mcp_catalog.toml
docs/: agent_loop_reference_notes.md  architecture.md  autonomy_benchmark_review.md  experience_loop.md  framework_reference_review.md  mcp_skill_catalog.md  milestone10_status.md  milestone11_browser_transaction_runtime_plan.md  milestone11_status.md  milestone2_plan.md  milestone2_status.md  milestone3_plan.md  milestone3_status.md  milestone4_plan.md  milestone4_status.md  milestone5_plan.md  milestone5_status.md  milestone6_plan.md  milestone6_status.md  milestone7_plan.md  milestone7_status.md  milestone7_workflow_kernel_plan.md  milestone8_status.md  milestone9_status.md  real_benchmark.md  real_benchmark_status.md  requirements_smoke_status.md  roadmap.md  user_requirements.md  work_log.md  workflow_kernel_design.md
evals/: __init__.py  test_config_and_prompts.py  test_experience_loop.py  test_finish_line_benchmark.py  test_harness_probe.py  test_harness_probe_task.py  test_mcp_skill_catalog.py  test_milestone10_ops_health.py  test_milestone10_ops_smoke.py  test_milestone10_real_e2e.py  test_milestone11_harness_backbone.py  test_milestone2_approvals.py  test_milestone2_channel_loop.py  test_milestone2_events.py  test_milestone2_full_flow.py  test_milestone2_ntfy_channel.py  test_milestone2_policy.py  test_milestone2_tool_approval_bridge.py  test_phase0_modules.py  (+41 more)
(+182 files in other folders)
