[project]
name = "agentic"
version = "0.1.0"
description = "Personal local GGUF agent harness"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agentic = "agentic.app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["evals"]
